--- a/index.html
+++ b/index.html
@@ -3,21 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sky Job Alert</title>
+  <title>SkyJobAlert</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>🌐 Sky Job Alert</h1>
-    <input type="text" id="search" placeholder="Search Jobs...">
+    <img src="logo.png" alt="Sky Job Alert Logo" class="logo">
+    <h1>🌟 Sky Job Alert 🌟</h1>
+    <p>Free Jobs | No Fees | No Charges</p>
   </header>
 
-  <main id="job-list"></main>
+  <main>
+    <h2>Latest Job Openings</h2>
+    <div class="jobs">
+      <div class="job-card">
+        <img src="dataentry.jpg" alt="Data Entry">
+        <p><b>Data Entry Operator</b> – Bhopal – Apply Now</p>
+      </div>
+
+      <div class="job-card">
+        <img src="sales.jpg" alt="Sales Executive">
+        <p><b>Sales Executive</b> – Indore – Apply Now</p>
+      </div>
+
+      <div class="job-card">
+        <img src="backoffice.jpg" alt="Back Office">
+        <p><b>Back Office Assistant</b> – Remote – Apply Now</p>
+      </div>
+    </div>
+  </main>
 
   <footer>
-    <p>© 2025 Sky Job Alert | Powered by Sky 🚀</p>
+    <p>© 2025 SkyJobAlert | Contact: skyjobalert@gmail.com</p>
   </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
